[tool.poetry]
name = "kyrsovaya-bzhenikovakate"
version = "0.1.0"
description = ""
authors = ["katoDar <katomyr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
call = "^0.1"
coverage = "^7.3.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
